--- a/index.html
+++ b/index.html
@@ -61,6 +61,4 @@
     </div>
   </div>
 
-  <script src="./index.web.js"></script>
-</body>
-</html>
+  <script type="module" src="./index.web.jsx"></script>
